--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.0",
+    "@angular/cdk": "^16.2.6",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
     "@angular/forms": "^16.2.0",
+    "@angular/material": "^16.2.6",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "angular-oauth2-oidc": "^15.0.1",
+    "highlight.js": "^11.8.0",
+    "prismjs": "^1.29.0",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^3.3.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -26,7 +32,9 @@
     "@angular-devkit/build-angular": "^16.2.4",
     "@angular/cli": "^16.2.4",
     "@angular/compiler-cli": "^16.2.0",
+    "@types/highlight.js": "^10.1.0",
     "@types/jasmine": "~4.3.0",
+    "@types/prismjs": "^1.26.1",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
