--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,7 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
+  "defaultProject": "default",
   "cli": {
     "packageManager": "npm",
     "analytics": false
